--- a/app/src/main/res/layout-land/card_data_pelanggann.xml
+++ b/app/src/main/res/layout-land/card_data_pelanggann.xml
@@ -56,23 +56,14 @@
             android:gravity="center_horizontal|center_vertical"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_nama_pelanggan_judul"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nama Pelanggan :"
-                android:paddingStart="10dp"
-                android:fontFamily="@font/poppinssemibold"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                />
+
             <TextView
                 android:id="@+id/tv_nama_pelanggan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/card_pelanggan_nama"
                 android:paddingStart="10dp"
-                android:fontFamily="@font/poppinsmediumitalic"
+                android:fontFamily="@font/poppinsbold"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 />
@@ -88,7 +79,7 @@
                 android:id="@+id/tv_nohp_pelanggan_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No HP :"
+                android:text="@string/card_pelanggan_nohp"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:textStyle="bold"
@@ -98,7 +89,7 @@
                 android:id="@+id/tv_nohp_pelanggan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_nohp"
+                android:text="-"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinsmediumitalic"
                 android:textStyle="bold"
@@ -118,7 +109,7 @@
                 android:id="@+id/tv_terdaftar_pelanggan_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Terdaftar :"
+                android:text="@string/card_pelanggan_terdaftar"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:textStyle="bold"
@@ -128,7 +119,7 @@
                 android:id="@+id/tv_terdaftar_pelanggan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_terdaftar"
+                android:text="-"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinsmediumitalic"
                 android:textStyle="bold"
@@ -148,7 +139,7 @@
                 android:id="@+id/tv_alamat_pelanggan_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Alamat :"
+                android:text="@string/card_pelanggan_alamat"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:textStyle="bold"
@@ -158,7 +149,7 @@
                 android:id="@+id/tv_alamat_pelanggan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_alamat"
+                android:text="-"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinsmediumitalic"
                 android:textStyle="bold"
