--- a/app/src/main/res/layout/card_layanan_pelanggan.xml
+++ b/app/src/main/res/layout/card_layanan_pelanggan.xml
@@ -26,7 +26,7 @@
                 android:fontFamily="@font/poppinssemibold"
                 android:textColor="@color/white"
                 android:padding="5dp"
-                android:text="ID Layanan :"
+                android:text="@string/card_layanan_id"
                 android:textSize="16sp" />
             <TextView
                 android:id="@+id/id_layanan"
@@ -36,7 +36,7 @@
                 android:fontFamily="@font/poppinsmediumitalic"
                 android:textColor="@color/white"
                 android:padding="5dp"
-                android:text="@string/card_layanan_id"
+                android:text="-"
                 android:textSize="16sp" />
 
 
@@ -81,7 +81,7 @@
             android:id="@+id/tv_harga_layanan_judul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Harga :"
+            android:text="@string/card_layanan_harga"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"
@@ -91,7 +91,7 @@
             android:id="@+id/tv_harga_layanan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_layanan_harga"
+            android:text="-"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmediumitalic"
             android:textStyle="bold"
@@ -109,7 +109,7 @@
             android:id="@+id/tv_layanancabang_judul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cabang :"
+            android:text="@string/card_layanan_cabang"
             android:paddingStart="10dp"
             android:textStyle="bold"
             android:fontFamily="@font/poppinssemibold"
@@ -119,7 +119,7 @@
             android:id="@+id/tv_layanancabang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_layanan_cabang"
+            android:text="-"
             android:paddingStart="10dp"
             android:textStyle="bold"
             android:fontFamily="@font/poppinsmediumitalic"
