--- a/app/src/main/res/layout/card_pilih_layanan.xml
+++ b/app/src/main/res/layout/card_pilih_layanan.xml
@@ -68,7 +68,7 @@
                 android:id="@+id/tv_harga_layanan_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Harga :"
+                android:text="@string/card_layanan_pilih_harga"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:textStyle="bold"
@@ -78,7 +78,7 @@
                 android:id="@+id/tv_harga_layanan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_layanan_pilih_harga"
+                android:text="-"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinsmediumitalic"
                 android:textStyle="bold"
