--- a/app/src/main/res/layout/card_pilih_pelanggan.xml
+++ b/app/src/main/res/layout/card_pilih_pelanggan.xml
@@ -68,7 +68,7 @@
                 android:id="@+id/tv_nohp_pelanggan_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No HP :"
+                android:text="@string/card_pelanggan_pilih_nohp"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:textStyle="bold"
@@ -78,7 +78,7 @@
                 android:id="@+id/tv_nohp_pelanggan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_pilih_nohp"
+                android:text="-"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinsmediumitalic"
                 android:textStyle="bold"
@@ -99,7 +99,7 @@
                 android:id="@+id/tv_alamat_pelanggan_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Alamat :"
+                android:text="@string/card_pelanggan_pilih_alamat"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:textStyle="bold"
@@ -109,7 +109,7 @@
                 android:id="@+id/tv_alamat_pelanggan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_pilih_alamat"
+                android:text="-"
                 android:paddingStart="10dp"
                 android:fontFamily="@font/poppinsmediumitalic"
                 android:textStyle="bold"
