--- a/app/src/main/res/layout/dialog_mod_hubungi_pelanggan.xml
+++ b/app/src/main/res/layout/dialog_mod_hubungi_pelanggan.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textJudulHubungi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hubungi Pelanggan"
+        android:text="@string/HubungiPelanggan"
         android:textSize="20sp"
         android:fontFamily="@font/poppinsbold"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +22,7 @@
         android:id="@+id/textPilihMetode_hubungi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pilih Metode Menghubungi:"
+        android:text="@string/PilihMetodeMenghubungi"
         android:fontFamily="@font/poppinsmedium"
         app:layout_constraintTop_toBottomOf="@id/textJudulHubungi"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
         android:id="@+id/buttonBatal_hubungi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Batal"
+        android:text="@string/BatalPelanggan"
         android:textSize="18sp"
         android:textColor="#3F51B5"
         android:textStyle="bold"
