--- a/app/src/main/res/layout/dialog_mod_pelanggan.xml
+++ b/app/src/main/res/layout/dialog_mod_pelanggan.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/tv_dialog_mod_pelanggan_judul"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Detail Pelanggan"
+                    android:text="@string/DetailPelanggan"
                     android:textSize="18sp"
                     android:textColor="#133E87"
                     android:fontFamily="@font/poppinsbold"
@@ -56,7 +56,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="ID Pelanggan"
+                        android:text="@string/dialog_idPelanggan"
                         android:textColor="#333"
                         android:textSize="14sp"
                         android:fontFamily="@font/poppinssemibold" />
@@ -85,7 +85,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Nama Pelanggan"
+                        android:text="@string/dialog_NamaPelanggan"
                         android:textColor="#333"
                         android:textSize="14sp"
                         android:fontFamily="@font/poppinssemibold" />
@@ -115,7 +115,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Alamat"
+                        android:text="@string/dialog_Alamat"
                         android:textColor="#333"
                         android:textSize="14sp"
                         android:fontFamily="@font/poppinssemibold" />
@@ -144,7 +144,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="No HP"
+                        android:text="@string/dialog_NoHP"
                         android:textColor="#333"
                         android:textSize="14sp"
                         android:fontFamily="@font/poppinssemibold" />
@@ -174,7 +174,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Terdaftar"
+                        android:text="@string/dialog_Terdaftar"
                         android:textColor="#333"
                         android:textSize="14sp"
                         android:fontFamily="@font/poppinssemibold" />
@@ -202,7 +202,7 @@
                         android:id="@+id/buttonsunting"
                         android:layout_width="0dp"
                         android:layout_height="48dp"
-                        android:text="Sunting"
+                        android:text="@string/dialog_Sunting"
                         app:icon="@drawable/edit"
                         android:textColor="@android:color/white"
                         android:backgroundTint="#133E87"
@@ -216,7 +216,7 @@
                         android:id="@+id/buttonhapus"
                         android:layout_width="0dp"
                         android:layout_height="48dp"
-                        android:text="Hapus"
+                        android:text="@string/dialog_Hapus"
                         app:icon="@drawable/trash"
                         android:textColor="@android:color/white"
                         android:backgroundTint="#C62828"
