--- a/app/src/main/res/layout/card_data_pelanggann.xml
+++ b/app/src/main/res/layout/card_data_pelanggann.xml
@@ -79,7 +79,7 @@
             android:id="@+id/tv_nohp_pelanggan_judul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No HP :"
+            android:text="@string/card_pelanggan_nohp"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"
@@ -89,7 +89,7 @@
             android:id="@+id/tv_nohp_pelanggan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_nohp"
+            android:text="-"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmediumitalic"
             android:textStyle="bold"
@@ -109,7 +109,7 @@
             android:id="@+id/tv_terdaftar_pelanggan_judul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Terdaftar :"
+            android:text="@string/card_pelanggan_terdaftar"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"
@@ -119,7 +119,7 @@
             android:id="@+id/tv_terdaftar_pelanggan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_terdaftar"
+            android:text="-"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmediumitalic"
             android:textStyle="bold"
@@ -139,7 +139,7 @@
             android:id="@+id/tv_alamat_pelanggan_judul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Alamat :"
+            android:text="@string/card_pelanggan_alamat"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinssemibold"
             android:textStyle="bold"
@@ -149,7 +149,7 @@
             android:id="@+id/tv_alamat_pelanggan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_alamat"
+            android:text="-"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmediumitalic"
             android:textStyle="bold"
