--- a/app/src/main/res/layout/card_laporan.xml
+++ b/app/src/main/res/layout/card_laporan.xml
@@ -20,15 +20,6 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvAngka"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:fontFamily="@font/poppinsmedium"
-                android:text="[-]"
-                android:textSize="14sp" />
-
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -176,7 +167,7 @@
                     android:id="@+id/tvDiambil"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diambil Pada\n2025-04-14 14:14:14"
+                    android:text="@string/DiambilPada"
                     android:textAlignment="textEnd"
                     android:textSize="10sp"
                     android:layout_marginEnd="10dp"
